tests/dfrouter/errors/detector_flow_files/broken_detectors_flows_file1d/errors.dfrouter
Error: Element 'qpkw' is missing in 'input_flows.txt', line 2;
 The following values must be supplied : 'Detector', 'Time', 'qPKW'
 The according column names must be given in the first line of the file.
Quitting (on error).
